fix wings width on smaller devises

--- a/src/components/MainInfo/mainInfo.module.css
+++ b/src/components/MainInfo/mainInfo.module.css
@@ -49,7 +49,7 @@
     content: "";
     position: absolute;
     top: 50%;
-    width: 4.875rem;
+    width: 10vw;
     height: 6.25rem;
     transform: translateY(-50%);
     background-repeat: no-repeat;
